--- a/style.css
+++ b/style.css
@@ -34,3 +34,11 @@ h1 {
     height: 550px;
     width: 500;
 }
+
+.experience-area {
+    width: 40%;
+    padding: 2%;
+    margin: 5%;
+    border-radius: 5px;
+    box-shadow: 10px 10px 40px pink;
+}
