--- a/style.css
+++ b/style.css
@@ -42,3 +42,11 @@ h1 {
     border-radius: 5px;
     box-shadow: 10px 10px 40px pink;
 }
+
+#senior {
+    border-left: 10px red solid;
+}
+
+#junior {
+    border-left: 10px green solid;
+}
